[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-plpy"
description = "Data reduction pipelines developed based on drpy."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Ruining ZHAO", email = "ruiningzhao@mail.bnu.edu.cn"}, 
]
requires-python = ">=3.7.3"
classifiers = [
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", 
    "Operating System :: OS Independent", 
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/RuiningZHAO/plpy"
"Tracker" = "https://github.com/RuiningZHAO/plpy/issues"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
plpy = ["bfosc/lib/**/*"]

[tool.setuptools.dynamic]
version = {attr = "plpy.__version__"}